--- a/app/src/main/res/layout/fragment_sleep_tracker.xml
+++ b/app/src/main/res/layout/fragment_sleep_tracker.xml
@@ -69,6 +69,7 @@
         <Button
             android:id="@+id/start_button"
             android:onClick="@{() -> sleepTrackerViewModel.onStartTracking()}"
+            android:enabled="@{sleepTrackerViewModel.startButtonVisible}"
             style="@style/SleepButtons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -82,7 +83,7 @@
         <Button
             android:id="@+id/stop_button"
             android:onClick="@{() -> sleepTrackerViewModel.onStopTracking()}"
-            style="@style/SleepButtons"
+            android:enabled="@{sleepTrackerViewModel.stopButtonVisible}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin"
@@ -95,6 +96,7 @@
         <Button
             android:id="@+id/clear_button"
             android:onClick="@{() -> sleepTrackerViewModel.onClear()}"
+            android:enabled="@{sleepTrackerViewModel.clearButtonVisible}"
             style="@style/SleepButtons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
